added reconstruction app

--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,windows,visualstudiocode,python,opencv
+
+outputs/
+images/
